# IOS_Course

./: .gitignore  CMakeLists.txt  array.swift  first.cpp  main.cpp  second.cpp  setings.h  strings.swift  varible,const and datatype.swift
